syntax = "proto3";

package ozoncp.ocp_template_api.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/ozoncp/ocp-template-api/pkg/ocp-template-api;ocp_template_api";

// OcpTemplateApiService - Service for working with templates
service OcpTemplateApiService {
  // CreateTemplateV1 - Create an template
  rpc CreateTemplateV1(CreateTemplateV1Request) returns (CreateTemplateV1Response) {
    option (google.api.http) = {
      post: "/v1/templates"
      body: "*"
    };
  }
}

// Offer ...
message Template {
  uint64 id  = 1;
  uint64 foo = 2;
}

// CreateOfferV1Request - create offer. Fields are validated
message CreateTemplateV1Request {
  uint64 foo = 1 [(validate.rules).uint64.gt = 0];
}

// CreateTemplateV1Response ...
message CreateTemplateV1Response {
  uint64 id = 1;
}
